--- a/fastapi-app/pyproject.toml
+++ b/fastapi-app/pyproject.toml
@@ -8,3 +8,4 @@ uvicorn = {extras = ["standart"], version = "^0.32.1"}
 pydantic = {extras = ["email"], version = "^2.10.3"}
 pydantic-settings = "^2.7.0"
 sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
+asyncpg = "^0.30.0"
