--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ pydantic-settings = "^2.7.0"
 sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
 asyncpg = "^0.30.0"
 alembic = "^1.14.0"
+fastapi-users = {extras = ["sqlalchemy"], version = "^14.0.1"}
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.10.0"
